generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  student
  company
  admin
  superadmin
}

model User {
  id           String   @id @default(cuid())
  email        String   @unique
  passwordHash String
  role         UserRole @default(student)
  firstName    String?
  lastName     String?
  university   String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  student Student?
  company Company?

  @@map("users")
}

model Company {
  id                      String   @id @default(cuid())
  userId                  String   @unique
  companyName             String
  industry                String?
  website                 String?
  logoUrl                 String?
  description             String?
  location                String?
  contactPerson           String?
  isValidated             Boolean  @default(false)
  verificationDocumentUrl String?
  createdAt               DateTime @default(now())
  updatedAt               DateTime @updatedAt

  user   User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  offers InternshipOffer[]

  @@map("companies")
}

model Student {
  id         String   @id @default(cuid())
  userId     String   @unique
  department String?
  cvUrl      String?
  skills     String[]
  bio        String?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  applications Application[]

  @@map("students")
}

enum OfferType {
  remote
  onsite
  hybrid
}

enum OfferStatus {
  draft
  active
  closed
}

enum ApplicationStatus {
  pending
  accepted
  rejected
  withdrawn
  validated
}

model InternshipOffer {
  id           String      @id @default(cuid())
  companyId    String
  title        String
  description  String
  requirements String
  duration     String
  location     String
  type         OfferType   @default(onsite)
  status       OfferStatus @default(active)
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt

  company      Company       @relation(fields: [companyId], references: [id], onDelete: Cascade)
  applications Application[]

  @@map("internship_offers")
}

model Application {
  id          String            @id @default(cuid())
  studentId   String
  offerId     String
  coverLetter String?
  cvUrl       String?
  status      ApplicationStatus @default(pending)
  appliedAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  student Student         @relation(fields: [studentId], references: [id], onDelete: Cascade)
  offer   InternshipOffer @relation(fields: [offerId], references: [id], onDelete: Cascade)

  @@map("applications")
}
