@startuml ClassDiagram
title Class Diagram — Stag.io
skinparam classAttributeIconSize 0

enum UserRole {
  student
  company
  admin
  superadmin
  university
}

enum OfferType {
  remote
  onsite
  hybrid
}

enum OfferStatus {
  draft
  active
  closed
}

enum ApplicationStatus {
  pending
  accepted
  rejected
  withdrawn
  validated
}

enum ReviewerRole {
  student
  company
}

enum NotificationType {
  application_status_changed
  new_application
  agreement_needs_validation
  company_pending_approval
  university_pending_approval
  new_review
}

class User {
  - id : CUID2 <<PK>>
  - email : String <<unique>>
  - passwordHash : String
  - role : UserRole
  - firstName : String
  - lastName : String
  - university : String
  - isEmailVerified : Boolean
  - emailVerificationCode : String
  - emailVerificationExpiry : DateTime
  - passwordResetToken : String
  - passwordResetExpiry : DateTime
  - deactivatedAt : DateTime
  - createdAt : DateTime
  - updatedAt : DateTime
  + register()
  + login()
  + verifyEmail()
  + resetPassword()
  + logout()
}

class Student {
  - id : CUID2 <<PK>>
  - userId : CUID2 <<FK>>
  - department : String
  - cvUrl : String
  - skills : String[]
  - bio : String
  - profilePhotoUrl : String
  - portfolioPhotos : String[]
  - createdAt : DateTime
  - updatedAt : DateTime
  + updateProfile()
  + uploadCV()
  + getSmartMatch()
}

class Company {
  - id : CUID2 <<PK>>
  - userId : CUID2 <<FK>>
  - companyName : String
  - industry : String
  - website : String
  - logoUrl : String
  - description : String
  - location : String
  - contactPerson : String
  - isValidated : Boolean
  - verificationDocumentUrl : String
  - createdAt : DateTime
  - updatedAt : DateTime
  + updateProfile()
  + publishOffer()
  + manageApplications()
}

class University {
  - id : CUID2 <<PK>>
  - userId : CUID2 <<FK>>
  - universityName : String
  - domain : String <<unique>>
  - website : String
  - logoUrl : String
  - description : String
  - location : String
  - isValidated : Boolean
  - createdAt : DateTime
  - updatedAt : DateTime
  + validateAgreement()
  + viewStudents()
}

class InternshipOffer {
  - id : CUID2 <<PK>>
  - companyId : CUID2 <<FK>>
  - title : String
  - description : String
  - requirements : String
  - duration : String
  - location : String
  - type : OfferType
  - status : OfferStatus
  - bannerUrl : String
  - createdAt : DateTime
  - updatedAt : DateTime
  + publish()
  + close()
}

class Application {
  - id : CUID2 <<PK>>
  - studentId : CUID2 <<FK>>
  - offerId : CUID2 <<FK>>
  - coverLetter : String
  - cvUrl : String
  - status : ApplicationStatus
  - appliedAt : DateTime
  - updatedAt : DateTime
  + submit()
  + withdraw()
  + updateStatus()
}

class SavedOffer {
  - id : CUID2 <<PK>>
  - studentId : CUID2 <<FK>>
  - offerId : CUID2 <<FK>>
  - savedAt : DateTime
  + save()
  + unsave()
}

class Review {
  - id : CUID2 <<PK>>
  - applicationId : CUID2 <<FK>>
  - reviewerUserId : CUID2 <<FK>>
  - revieweeUserId : CUID2 <<FK>>
  - reviewerRole : ReviewerRole
  - rating : Integer
  - comment : String
  - createdAt : DateTime
  + submit()
}

class Notification {
  - id : CUID2 <<PK>>
  - userId : CUID2 <<FK>>
  - type : NotificationType
  - title : String
  - message : String
  - isRead : Boolean
  - relatedId : String
  - createdAt : DateTime
  + markAsRead()
}

' ── Relations ──
User "1" -- "0..1" Student : owns >
User "1" -- "0..1" Company : owns >
User "1" -- "0..1" University : owns >
User "1" -- "*" Notification : receives >

Student "1" -- "*" Application : submits >
Student "1" -- "*" SavedOffer : bookmarks >

Company "1" -- "*" InternshipOffer : publishes >

InternshipOffer "1" -- "*" Application : receives >
InternshipOffer "1" -- "*" SavedOffer : is bookmarked in >

Application "1" -- "0..2" Review : generates >

User "1" -- "*" Review : writes > (reviewerUserId)
User "1" -- "*" Review : is reviewed > (revieweeUserId)

User ..> UserRole
InternshipOffer ..> OfferType
InternshipOffer ..> OfferStatus
Application ..> ApplicationStatus
Review ..> ReviewerRole
Notification ..> NotificationType

@enduml
